# vorst

./: Cargo.toml
docs/: architectur.md  blob.md  techstack.md  userflow.md  vector.md
src/: blob.rs  config.rs  coordinator.rs  engine.rs  error.rs  id.rs  main.rs  metadata.rs  sys.rs  vector.rs  wal.rs
src/blob/: cache.rs  compaction.rs  core.rs  error.rs  file.rs  format.rs  mod.rs  segment.rs  state.rs  storage.rs  types.rs  utils.rs
src/metadata/: error.rs  mod.rs  storage.rs
