[package]
name        = "vorst"
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
authors     = ["Dimas Prabowo <dimasprabowo98@icloud.com>"]
repository  = "https://github.com/98prabowo/vorst"
description = "High-performance Single-node Object Storage with Integrated Vector Search"

[dependencies]
# Storage & Database
sled        = "0.34"
memmap2     = "0.9"
bytemuck    = { version = "1.25", features = ["derive"] }
serde       = { version = "1.0", features = ["derive"] }

# AI & Math
candle-core = "0.10"
ndarray     = "0.17"

# Concurrency & Async
tokio       = { version = "1.0", features = ["full"] }
arc-swap    = "1.9"

# API & Networking
axum        = "0.8"
tonic       = "0.14"

# Utilities
anyhow      = "1.0"
crc32fast   = "1.5"
chrono      = "0.4"
tracing     = "0.1"
uuid        = { version = "1.23", features = ["v4", "serde"] }
