[package]
name        = "vorst"
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
authors     = ["Dimas Prabowo <dimasprabowo98@icloud.com>"]
repository  = "https://github.com/98prabowo/vorst"
description = "High-performance Single-node Object Storage with Integrated Vector Search"

[dependencies]
# Storage & Database
bytemuck    = { version = "1.25", features = ["derive"] }
fs2         = "0.4.3"
lru         = "0.18"
memmap2     = "0.9"
nix         = { version = "0.31", features = ["fs"] }
redb        = "4.1"
rlimit      = "0.11"
serde       = { version = "1.0", features = ["derive"] }

# AI & Math
candle-core = "0.10"
ndarray     = "0.17"

# Concurrency & Async
arc-swap    = "1.9"
tokio       = { version = "1.0", features = ["full"] }

# API & Networking
axum        = "0.8"
tonic       = "0.14"

# Utilities
crc32fast   = "1.5"
chrono      = "0.4"
libc        = "0.2"
thiserror   = "2.0"
tracing     = "0.1"
uuid        = { version = "1.23", features = ["v7", "serde"] }
